--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.application.name = users-service
+spring.application.name = users
 server.port = 8770
+
+spring.config.import = optional:configserver:http://localhost:8888
 
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 
 spring.datasource.url = jdbc:h2:mem:testdb
-spring.h2.console.enabled= true
+spring.h2.console.enabled = true
 
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql = true
+spring.jpa.defer-datasource-initialization = true
