--- a/crypto-wallet/src/main/resources/application.properties
+++ b/crypto-wallet/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
-
-spring.application.name = bank-account
-server.port = 8200
-
-
+spring.application.name = crypto-wallet
+server.port = 8300
 
 
 spring.config.import=optional:configserver:http://localhost:8888
+
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 
 spring.datasource.url = jdbc:h2:mem:testdb
 spring.h2.console.enabled = true
