Added circuit breaker and rate limiter in transfer service

--- a/transfer-service/src/main/resources/application.properties
+++ b/transfer-service/src/main/resources/application.properties
@@ -8,3 +8,17 @@ spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 
 spring.jpa.defer-datasource-initialization = true
+
+##RETRY
+resilience4j.retry.instances.default.wait-duration=5s
+resilience4j.retry.instances.default.max-attempts=4
+
+##CIRCUIT BREAKER
+resilience4j.circuitbreaker.instances.transferService.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.transferService.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.transferService.failure-rate-threshold=10
+resilience4j.circuitbreaker.instances.transferService.permitted-number-of-calls-in-half-open-state=5
+
+##RATE LIMITER
+resilience4j.ratelimiter.instances.transferService.limit-for-period=2
+resilience4j.ratelimiter.instances.transferService.limit-refresh-period=30s
