--- a/currency-exchange/src/main/resources/application.properties
+++ b/currency-exchange/src/main/resources/application.properties
@@ -14,15 +14,15 @@ spring.jpa.defer-datasource-initialization=true
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 
 ##RETRY
-resilience4j.retry.instances.default.wait-duration=5s
-resilience4j.retry.instances.default.max-attempts=4
+resilience4j.retry.instances.currencyExchange.wait-duration=5s
+resilience4j.retry.instances.currencyExchange.max-attempts=4
 
 ##CIRCUIT BREAKER
-resilience4j.circuitbreaker.instances.circuitBreakerTest.wait-duration-in-open-state=5s
-resilience4j.circuitbreaker.instances.circuitBreakerTest.automatic-transition-from-open-to-half-open-enabled=true
-resilience4j.circuitbreaker.instances.circuitBreakerTest.failure-rate-threshold=10
-resilience4j.circuitbreaker.instances.circuitBreakerTest.permitted-number-of-calls-in-half-open-state=5
+resilience4j.circuitbreaker.instances.currencyExchange.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.currencyExchange.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.currencyExchange.failure-rate-threshold=10
+resilience4j.circuitbreaker.instances.currencyExchange.permitted-number-of-calls-in-half-open-state=5
 
 ##RATE LIMITER
-resilience4j.ratelimiter.instances.default.limit-for-period=2
-resilience4j.ratelimiter.instances.default.limit-refresh-period=30s
+resilience4j.ratelimiter.instances.currencyExchange.limit-for-period=2
+resilience4j.ratelimiter.instances.currencyExchange.limit-refresh-period=30s
